import our init.zombi.rc

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -9,7 +9,7 @@ import /init.usb.rc
 import /init.${ro.hardware}.rc
 import /init.${ro.zygote}.rc
 import /init.trace.rc
-import /init.omni.rc
+import /init.zombi.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
